--- a/config.toml
+++ b/config.toml
@@ -2,10 +2,10 @@
 base_url = "https://raph.ee"
 
 # Whether to automatically compile all Sass files in the sass directory
-compile_sass = true
+# compile_sass = true
 
 # Whether to build a search index to be used later on by a JavaScript library
-build_search_index = true
+# build_search_index = true
 
 [markdown]
 # Whether to do syntax highlighting
