--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,11 @@ name = "website"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 axum = "0.5.17"
 tokio = { version = "1.21.2", features = [ "full" ] }
+tower-http = { version =  "0.3.4", features = [ "fs" ] }
+tower = "0.4.13"
+rust-embed = "6.4.2"
+mime_guess = "2.0.4"
+http = "0.2.8"
