--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
-# The URL the site will be built for
-base_url = "https://raph.ee"
+# base_url = "https://raph.ee"
+base_url = "http://localhost:3030"
 
 # Whether to automatically compile all Sass files in the sass directory
 # compile_sass = true
@@ -7,8 +7,12 @@ base_url = "https://raph.ee"
 # Whether to build a search index to be used later on by a JavaScript library
 # build_search_index = true
 
+ignored_content = [ "*.pdf", "*.epub", "*.m4b" ]
+
 [markdown]
 highlight_code = true
 
 [extra]
-# Put all your custom variables here
+zola_site = "./public"
+static_dir = "./s"
+auth_dir = "./s/bookshelf"
