--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+rocket = "0.5.0-rc.2"
 tokio = { version = "1.21.2", features = [ "full" ] }
 warp = "0.3.3"
 pretty_env_logger = "0.4.0"
