--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
-# base_url = "https://raph.ee"
-base_url = "http://localhost:8000"
+base_url = "https://raph.ee"
+#base_url = "http://localhost:8000"
 
 # Whether to automatically compile all Sass files in the sass directory
 # compile_sass = true
